--- a/style.css
+++ b/style.css
@@ -89,9 +89,9 @@
     font-size: larger;
 
  }
- .company{
+  .company{
     background-color: bisque;
- }
+ } 
  .body1{
     background-color: rgb(245, 217, 208);
 
@@ -151,7 +151,7 @@
 .container img { max-height: 150px;} */
  
 .container{
-    margin-top: 20%;
+    margin-top: 2%;
 }
 
 
@@ -160,7 +160,8 @@
     
 } 
 .happy{
-    color: white;
+    color:white
+    (255, 255, 255);
 }
 
 
@@ -205,4 +206,7 @@
 }
 h4{
    color: white;
+}
+.raw{
+   color: aquamarine;
 }
